# lamport

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  README.md  TODO.md  flake.nix  justfile  rust-toolchain.toml
.github/workflows/: ci.yml  pages.yml
benches/: runtime_primitives.rs
docs/: book.toml
docs/src/: SPEC.md  SUMMARY.md  common-use-cases.md  index.md  what-this-repo-provides.md
examples/: chat.rs  local_upgrade.rs  multi_llm_agents.rs  observability.rs  runtime_comparison.rs  selective_receive.rs  state_change.rs  statem.rs  supervision.rs
examples/common/: support.rs
examples/multi_llm_agents/: application.rs  game.rs  http.rs  mod.rs  provider.rs
src/: actor.rs  application.rs  behaviour.rs  concurrent.rs  context.rs  control.rs  envelope.rs  internal.rs  lib.rs  lifecycle.rs  mailbox.rs  observability.rs  registry.rs  runtime.rs  scheduler.rs  shared.rs  snapshot.rs  supervisor.rs  types.rs
src/behaviour/: adapter.rs  gen_server.rs  gen_statem.rs
src/concurrent/: lifecycle.rs  worker.rs
src/internal/: config.rs  error.rs  exit_signal.rs  id.rs  shutdown.rs  supervisor_state.rs  turn.rs
src/observability/: build.rs  cursor.rs  prometheus.rs  tracing.rs  types.rs
src/runtime/: lifecycle.rs
src/supervisor/: child_context.rs  state.rs
src/types/: actor.rs  exit.rs  status.rs  supervision.rs
tests/: application_boot.rs  concurrent_propagation.rs  mailbox_properties.rs  restart_loops.rs  workloads.rs
tests/support/: mod.rs
